--- a/public/index.html
+++ b/public/index.html
@@ -20,20 +20,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#f12711" />
     <meta name="description" content="Invoicer | Create Invoices for clients" />
-    <meta name="author" content="Thomas Sankara" />
-    <meta name="keywords" content="create invoices, invoicer, thomas sankara" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>Invoicer | Create Invoices for clients</title>
+    <meta name="author" content="Miroslaw Widlarz" />
+    
+    <title>Offer generator</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
 
-    <!-- Contact form -->
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <textarea name="message"></textarea>
-    </form>
+   
   </body>
 </html>
